2002-09-24  Alan Modra  <amodra@bigpond.net.au>

	* emulparams/elf64ppc.sh (DATA_ADDR): Define.
	* emulparams/elf64_aix.sh (DATA_ADDR): Don't use a fixed address
	for start of .data, instead align up to 256M boundary.
	* scripttempl/aix.sc: Likewise.

2002-09-22  Mark Elbrecht  <snowball3@softhome.net>

	* scripttempl/i386go32.sc: Handle bss unique sections.

2002-09-21  Alan Modra  <amodra@bigpond.net.au>

	* ldmisc.c (vfinfo <%C,%D,%G>): Always output bfd, section and offset.

2002-09-17  Stan Cox  <scox@redhat.com>

	* emulparams/elf32bmipn32-defs.sh: New file.
	* emulparams/elf32bmipn32.sh: Use elf32bmipn32-defs.sh.
	* emulparams/elf32btsmipn32.sh: Likewise.
	* emulparams/elf64bmip.sh: Likewise.
	* emulparams/elf64btsmip.sh: Likewise.

2002-09-16  Bruno Haible  <bruno@clisp.org>

	* emulparams/elf_i386_fbsd.sh: Set OUTPUT_FORMAT to
	elf32-i386-freebsd.
	* emulparams/elf64alpha_fbsd.sh: Set OUTPUT_FORMAT to
	elf64-alpha-freebsd.

2002-09-11  Nick Clifton  <nickc@redhat.com>

	* NEWS: New TI port supports both C4x and C3x series of DSPs.

	* po/tr.po: Updated Turkish translation.

2002-09-06  Jeffrey A Law  (law@redhat.com)

        * configure.tgt (h8300-*-hms*, h8500-*-hms*): Restore.

2002-09-02  Nick Clifton  <nickc@redhat.com>

	* scripttempl/v850.sc: Add EXTERN references to __ctbpm __gp and
	__ep.
	* emulparams/v850.sh (TEMPLATE_NAME): Define.

2002-08-30  Nick Clifton  <nickc@redhat.com>

	* scripttempl/elfd10v.sc (MEMORY): Remove UNIFIED, it is not
	used.  Change INSN to start at 0x01000000 and extend for
	256K (ignoring holes).  Start the STACK on a word aligned
	boundary.
        (.rodata): Start it at the READONLY_START_ADDR.

2002-08-30  Alan Modra  <amodra@bigpond.net.au>

	* emulparams/elf32ppc.sh (ARCH): Set to "powerpc:common".

2002-08-28  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* Makefile.am: Add etic4xcoff.o in ALL_EMULATIONS list and
	added makefile targets for this file.
	* Makefile.in: Regenerate.