@@ -1,3 +1,9 @@
+2002-09-25  Alan Modra  <amodra@bigpond.net.au>
+
+	* ldexp.c (fold_unary): New.  Split out from exp_fold_tree.
+	(fold_binary): Correct abs - non-abs case.
+	(fold_trinary): New.  Split out from exp_fold_tree.
+
 2002-09-24  Alan Modra  <amodra@bigpond.net.au>
 
 	* emulparams/elf64ppc.sh (DATA_ADDR): Define.
